[package]
name = "anotherworld"
version = "0.1.0"
authors = ["Raymond Hilseth <rhilseth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
byteorder = "1.3"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.7"
structopt = "0.3"
timer = "0.1"

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
features = ["bundled"]

